--- a/src/app/dashboard/common/components/map/map.component.html
+++ b/src/app/dashboard/common/components/map/map.component.html
@@ -1,1 +1,1 @@
-<div #gmap [style.width]="mapWwidth" [style.height]="mapHeight"></div>
+<div #gmap [style.width]="mapWidth" [style.height]="mapHeight"></div>
